--- a/functional-samples/tutorial.better-jira-browse-debugging/manifest.json
+++ b/functional-samples/tutorial.better-jira-browse-debugging/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Better Jira browse",
-  "description": "Provide the ability to improve User Experience on Jira browse page, including toggle visibility of right hand sidebar or panel, maxmize the Create Issue pop up dialog or window.",
+  "name": "Better Jira Browse Debugging",
+  "description": "Provide the ability to improve User Experience on Jira browse page, including toggle visibility of right hand sidebar or panel, and maxmize the Create Issue pop up dialog or window.",
   "version": "0.1",
   "author": "yemingguang_hit@163.com", 
-  "homepage_url": "https://github.com/siyueyinghua/chrome-extensions-samples/tree/main/functional-samples/tutorial.better-jira-browse/README.md",
+  "homepage_url": "https://github.com/siyueyinghua/chrome-extensions-samples/tree/main/functional-samples/tutorial.better-jira-browse-debugging/README.md",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -20,7 +20,7 @@
       "128": "images/icon_off-128.png"
     }
   },
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "background": {
     "service_worker": "service-worker.js"
   },
