--- a/functional-samples/tutorial.better-jira-browse/manifest.json
+++ b/functional-samples/tutorial.better-jira-browse/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Better Jira browse",
-  "description": "Provide the ability to improve User Experience on Jira browse page.",
-  "version": "0.1",
+  "name": "Better Jira Browse",
+  "description": "Provide the ability to improve User Experience on Jira browse page, including toggle visibility of right hand sidebar or panel, and maxmize the Create Issue pop up dialog or window.",
+  "version": "0.2",
   "author": "yemingguang_hit@163.com", 
   "homepage_url": "https://github.com/siyueyinghua/chrome-extensions-samples/tree/main/functional-samples/tutorial.better-jira-browse/README.md",
   "icons": {
@@ -20,7 +20,7 @@
       "128": "images/icon_off-128.png"
     }
   },
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "background": {
     "service_worker": "service-worker.js"
   },
